--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kFG-60-Imb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,23 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="diw-x0-Ozr">
+            <objects>
+                <navigationController id="kFG-60-Imb" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" opaque="NO" alpha="0.0" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="ylQ-8O-857">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Daj-dd-4Sx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H2B-fB-Z1y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2233" y="448"/>
+        </scene>
         <!--Metronome View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -86,16 +103,138 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="0G8-e5-L1y">
+                        <barButtonItem key="rightBarButtonItem" title="settingsButton" image="settings" width="36" style="plain" id="9wm-QS-XZx">
+                            <color key="tintColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="openMenuWithSender:" destination="BYZ-38-t0r" id="Hpm-4o-Xeh"/>
+                                <segue destination="PgZ-xe-vib" kind="show" id="I2W-Q5-TwH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="decrementButton" destination="huJ-0x-goJ" id="JyC-gp-OA9"/>
                         <outlet property="incrementButton" destination="KrZ-CO-g8Q" id="R7T-F4-o3n"/>
+                        <outlet property="settingsButton" destination="9wm-QS-XZx" id="hHF-WN-q6L"/>
                         <outlet property="tapButton" destination="y8r-1J-ZFl" id="dFV-bS-rBC"/>
                         <outlet property="tempoButton" destination="lyi-v4-qiX" id="H8D-da-gGu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-415.19999999999999" y="448.42578710644682"/>
+            <point key="canvasLocation" x="-415" y="448"/>
+        </scene>
+        <!--Settings View Controller-->
+        <scene sceneID="sZB-EN-lIg">
+            <objects>
+                <viewController id="PgZ-xe-vib" customClass="SettingsViewController" customModule="TAP_Metronome_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Rqz-Nl-CRb"/>
+                        <viewControllerLayoutGuide type="bottom" id="7KZ-gf-eDx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dDn-N8-zP2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Beats" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUT-CV-fML">
+                                <rect key="frame" x="142" y="80" width="90" height="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Colour" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBW-fx-p83">
+                                <rect key="frame" x="142" y="304" width="90" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gv-uz-FB6" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="80" y="354.5" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectRed:" destination="PgZ-xe-vib" eventType="touchUpInside" id="QgR-wh-EPq"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0a-Ad-STu" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="142" y="355" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectOrange:" destination="PgZ-xe-vib" eventType="touchUpInside" id="Z9a-PO-71Y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H5j-vI-4H3" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="204" y="355" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectYellow:" destination="PgZ-xe-vib" eventType="touchUpInside" id="cOg-I0-m2e"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5v-ho-d7T" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="266" y="355" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectGreen:" destination="PgZ-xe-vib" eventType="touchUpInside" id="RtF-SO-nj5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aYl-cm-0CC" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="165" y="403" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectPurple:" destination="PgZ-xe-vib" eventType="touchUpInside" id="mlA-aU-7jw"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gpB-nD-3cn" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="227" y="403" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectBlack:" destination="PgZ-xe-vib" eventType="touchUpInside" id="vpU-8C-ruk"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MTQ-dj-CCx" customClass="UICircleButton" customModule="TAP_Metronome_Swift" customModuleProvider="target">
+                                <rect key="frame" x="103" y="403" width="46" height="30"/>
+                                <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="selectBlue:" destination="PgZ-xe-vib" eventType="touchUpInside" id="J7M-dK-CMu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.26098805144384779" blue="0.54550781250000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="w5v-ho-d7T" firstAttribute="leading" secondItem="gpB-nD-3cn" secondAttribute="trailing" constant="-14" id="2ru-eT-PmR"/>
+                            <constraint firstItem="3gv-uz-FB6" firstAttribute="centerY" secondItem="n0a-Ad-STu" secondAttribute="centerY" id="BfK-tz-NSS"/>
+                            <constraint firstItem="aYl-cm-0CC" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="CD6-kv-11x"/>
+                            <constraint firstItem="gpB-nD-3cn" firstAttribute="leading" secondItem="aYl-cm-0CC" secondAttribute="trailing" constant="16" id="EBp-3X-TrA"/>
+                            <constraint firstItem="w5v-ho-d7T" firstAttribute="centerY" secondItem="H5j-vI-4H3" secondAttribute="centerY" id="EF4-pg-Z0Q"/>
+                            <constraint firstItem="aYl-cm-0CC" firstAttribute="leading" secondItem="MTQ-dj-CCx" secondAttribute="trailing" constant="16" id="HYU-go-hdq"/>
+                            <constraint firstItem="gpB-nD-3cn" firstAttribute="centerY" secondItem="aYl-cm-0CC" secondAttribute="centerY" id="PPp-ti-MZN"/>
+                            <constraint firstItem="H5j-vI-4H3" firstAttribute="centerY" secondItem="n0a-Ad-STu" secondAttribute="centerY" id="QID-1G-ScZ"/>
+                            <constraint firstItem="n0a-Ad-STu" firstAttribute="leading" secondItem="3gv-uz-FB6" secondAttribute="trailing" constant="16" id="Rq9-YE-gvW"/>
+                            <constraint firstItem="vUT-CV-fML" firstAttribute="top" secondItem="Rqz-Nl-CRb" secondAttribute="bottom" constant="16" id="Ruo-lU-gT9"/>
+                            <constraint firstItem="GBW-fx-p83" firstAttribute="top" secondItem="vUT-CV-fML" secondAttribute="bottom" constant="196" id="TT4-9U-3dc"/>
+                            <constraint firstItem="3gv-uz-FB6" firstAttribute="top" secondItem="GBW-fx-p83" secondAttribute="bottom" constant="16" id="YKF-of-4hZ"/>
+                            <constraint firstItem="MTQ-dj-CCx" firstAttribute="centerY" secondItem="aYl-cm-0CC" secondAttribute="centerY" id="aaA-03-nMt"/>
+                            <constraint firstItem="H5j-vI-4H3" firstAttribute="leading" secondItem="n0a-Ad-STu" secondAttribute="trailing" constant="16" id="nyF-CL-Bup"/>
+                            <constraint firstItem="vUT-CV-fML" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="pim-Of-tXH"/>
+                            <constraint firstItem="GBW-fx-p83" firstAttribute="centerX" secondItem="dDn-N8-zP2" secondAttribute="centerX" id="vfT-Hu-iQ8"/>
+                            <constraint firstItem="aYl-cm-0CC" firstAttribute="top" secondItem="n0a-Ad-STu" secondAttribute="bottom" constant="18" id="z5f-9C-0nV"/>
+                            <constraint firstItem="w5v-ho-d7T" firstAttribute="leading" secondItem="H5j-vI-4H3" secondAttribute="trailing" constant="16" id="zg0-lL-P6z"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="BeatsLabel" destination="vUT-CV-fML" id="8cn-dH-s7j"/>
+                        <outlet property="ColorsLabel" destination="GBW-fx-p83" id="eIz-Nm-IgW"/>
+                        <outlet property="blackButton" destination="gpB-nD-3cn" id="YVS-Ea-jzt"/>
+                        <outlet property="blueButton" destination="MTQ-dj-CCx" id="u6Q-IH-KKR"/>
+                        <outlet property="greenButton" destination="w5v-ho-d7T" id="Acp-Nz-9PI"/>
+                        <outlet property="orangeButton" destination="n0a-Ad-STu" id="zhX-Ko-Uug"/>
+                        <outlet property="purpleButton" destination="aYl-cm-0CC" id="LgR-uT-pIg"/>
+                        <outlet property="redButton" destination="3gv-uz-FB6" id="D9g-f3-JFr"/>
+                        <outlet property="yellowButton" destination="H5j-vI-4H3" id="Rti-iO-vGI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VBS-nb-Pfz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="368.80000000000001" y="98.50074962518741"/>
         </scene>
         <!--Tempo Slider View Controller-->
         <scene sceneID="JCw-eD-wxe">
@@ -161,12 +300,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J9Y-Lx-I3n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="381.60000000000002" y="589.65517241379314"/>
+            <point key="canvasLocation" x="369" y="810"/>
         </scene>
     </scenes>
     <resources>
         <image name="cross" width="12" height="12"/>
         <image name="decrement" width="16" height="2"/>
         <image name="increment" width="16" height="16"/>
+        <image name="settings" width="8" height="32"/>
     </resources>
 </document>
